# face-detection

./: CMakeLists.txt  Makefile  README.md  face_detection.cpp  hello_world  hello_world.cpp  test_opencv.cpp
